--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -32,8 +32,6 @@ html {
   font-family: "Roboto", "Arial", sans-serif; }
 
 body {
-  overflow-x: hidden;
-  overflow-y: scroll;
   box-sizing: border-box; }
 
 h1 {
@@ -64,9 +62,6 @@ h2 {
     h2 {
       font-size: 4rem;
       margin-bottom: 7.5rem; } }
-  @media (max-width: 56.25em) {
-    h2 {
-      margin-bottom: 7rem; } }
   @media (max-width: 37.5em) {
     h2 {
       margin: 0 2rem;
@@ -82,6 +77,10 @@ h3 {
   @media (max-width: 75em) {
     h3 {
       font-size: 2.8rem; } }
+  @media (max-width: 28.12em) {
+    h3 {
+      font-size: 2.5rem;
+      text-align: center; } }
 
 .icon-small {
   font-size: 304%;
@@ -160,52 +159,6 @@ footer {
   padding: 5rem;
   text-align: center; }
 
-.row {
-  max-width: 180rem;
-  margin: 0 auto; }
-  .row:not(:last-child) {
-    margin-bottom: 8rem; }
-    @media (max-width: 56.25em) {
-      .row:not(:last-child) {
-        margin-bottom: 4rem; } }
-  @media (max-width: 56.25em) {
-    .row {
-      max-width: 90%;
-      padding: 0 2rem 0 0; } }
-  .row::after {
-    content: "";
-    display: table;
-    clear: both; }
-  .row [class^="col-"] {
-    float: left; }
-    .row [class^="col-"]:not(:last-child) {
-      margin-right: 6rem; }
-      @media (max-width: 75em) {
-        .row [class^="col-"]:not(:last-child) {
-          margin-right: 3rem; } }
-      @media (max-width: 56.25em) {
-        .row [class^="col-"]:not(:last-child) {
-          margin-right: 0;
-          margin-bottom: 4rem; } }
-    @media (max-width: 56.25em) {
-      .row [class^="col-"] {
-        width: 50% !important; } }
-    @media (max-width: 37.5em) {
-      .row [class^="col-"] {
-        width: 100% !important; } }
-  .row .col-1-of-2 {
-    width: calc((100% - 6rem) / 2); }
-  .row .col-1-of-3 {
-    width: calc((100% - 2 * 6rem) / 3); }
-  .row .col-2-of-3 {
-    width: calc( 2 * ((100% - 2 * 6rem) / 3) + 6rem); }
-  .row .col-1-of-4 {
-    width: calc((100% - 3 * 6rem) / 4); }
-  .row .col-2-of-4 {
-    width: calc( 2 * ((100% - 3 * 6rem) / 4) + 6rem); }
-  .row .col-3-of-4 {
-    width: calc( 3 * ((100% - 3 * 6rem) / 4) + 2 *6rem); }
-
 nav {
   margin: 2rem 9rem 5rem 9rem;
   padding: 5rem 0;
@@ -238,23 +191,13 @@ nav {
   display: -webkit-flex;
   display: flex;
   justify-content: space-between;
-  padding: 3.2rem 1.6rem 8.8rem 1.6rem;
-  /* 
-.img-box {
-	flex-grow: 0;
-	flex-shrink: 0;
-	display: flex;
-	justify-content: flex-end;
-	margin: 0 0 2em 4em;
-	width: 50%;
-} */ }
+  padding: 3.2rem 1.6rem 8.8rem 1.6rem; }
   .intro__text-box {
     flex: 1;
     flex-grow: 1;
     flex-shrink: 1;
     width: 50%;
-    margin-left: 8rem;
-    /* margin-top: 7em; */ }
+    margin-left: 8rem; }
     @media (max-width: 56.25em) {
       .intro__text-box {
         flex: 0 1 90rem; } }
@@ -298,13 +241,10 @@ nav {
     .intro__img-box img {
       width: 91%;
       height: auto;
-      border-radius: 0.6rem;
-      /* box-shadow: 0 15px 15px $color-focus-1; */
-      /* max-width: 50vh; */
-      /* align-items: center; */ }
+      border-radius: 0.6rem; }
 
 /* -----------------------------------*/
-/* Second Section */
+/* Second + Third Sections */
 /*----------------------------------*/
 .portfolio {
   background-color: whitesmoke;
@@ -312,52 +252,63 @@ nav {
   @media (max-width: 37.5em) {
     .portfolio {
       padding: 3rem 0; } }
-  .portfolio__items {
-    margin: 0 5rem;
-    width: calc(100% + 9.8rem); }
-    @media (max-width: 56.25em) {
-      .portfolio__items {
-        padding: 5rem 4rem 3rem -1rem; } }
-    @media (max-width: 37.5em) {
-      .portfolio__items {
-        padding: 5rem 3rem 3rem 0; } }
-    @media (max-width: 28.12em) {
-      .portfolio__items {
-        padding: 4rem 2rem 2rem 0; } }
-    .portfolio__items--desc {
-      text-align: left;
-      width: 70%;
-      font-size: 1.6rem;
-      font-weight: 400;
-      color: #6d777e;
-      margin-bottom: 3.2rem; }
-      @media (max-width: 75em) {
-        .portfolio__items--desc {
-          font-size: 1.4rem;
-          width: 80%; } }
-      @media (max-width: 56.25em) {
-        .portfolio__items--desc {
-          font-size: 1.4rem;
-          width: 70%; } }
-      @media (max-width: 37.5em) {
-        .portfolio__items--desc {
-          font-size: 1.4rem;
-          width: 75%; } }
+  @media (max-width: 28.12em) {
+    .portfolio {
+      padding: 0; } }
+
+.projects {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 41.6rem);
+  grid-gap: 1rem;
+  justify-content: space-evenly;
+  align-content: flex-start; }
+  @media (max-width: 37.5em) {
+    .projects {
+      margin-top: 5rem; } }
+  @media (max-width: 28.12em) {
+    .projects {
+      grid-template-columns: repeat(auto-fit, 100vw); } }
+
+.box {
+  flex-grow: 0;
+  flex-shrink: 1;
+  margin: 0 0 6rem 0rem;
+  position: relative;
+  max-width: 41.6rem; }
+  @media (max-width: 28.12em) {
+    .box {
+      width: 100vw; } }
+  .box__image {
+    display: inline-block;
+    overflow: hidden;
+    position: relative;
+    margin-bottom: 2rem;
+    border-radius: 0.5rem;
+    box-shadow: 0 1.6rem 1.3rem rgba(0, 0, 0, 0.15); }
+    .box__image img {
+      display: block;
+      position: relative;
+      max-height: 26rem;
+      width: auto;
+      transition: transform 0.2s ease; }
       @media (max-width: 28.12em) {
-        .portfolio__items--desc {
-          font-size: 1.4rem;
-          width: 70%; } }
-  .portfolio__image {
+        .box__image img {
+          width: 100vw; } }
+  .box__image:hover img {
+    transform: scale(1.075); }
+  .box__desc {
     display: block;
-    margin: 0 0 3.2rem 0; }
-    .portfolio__image img {
-      display: inline-block;
-      width: 70%;
-      box-shadow: 0 1.6rem 1.3rem rgba(0, 0, 0, 0.15); }
-
-.actions {
-  float: left; }
-
-.actions li {
-  display: inline-block;
-  margin-right: 1.5rem; }
+    font-size: 1.6rem;
+    font-weight: 400;
+    color: #6d777e;
+    margin-bottom: 3.2rem; }
+    @media (max-width: 28.12em) {
+      .box__desc {
+        margin: 0 1rem 2.8rem 1rem; } }
+  .box__actions {
+    display: flex; }
+    @media (max-width: 28.12em) {
+      .box__actions {
+        justify-content: center; } }
+    .box__actions li:not(:last-child) {
+      margin-right: 1.5rem; }
