--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -24,7 +24,6 @@ h2 {
 	display: inline-block;
 	margin-left: 9rem;
 	margin-bottom: 9.6rem;
-	// margin: 0 0 9.6rem 0;
 	padding: 0 3.6rem 2.4rem 0;
 
 	@include respond(tab-land) {
@@ -32,15 +31,10 @@ h2 {
 		margin-bottom: 7.5rem;
 	}
 
-	@include respond(tab-port) {
-		margin-bottom: 7rem;
-	}
-
 	@include respond(phone) {
 		margin: 0 2rem;
 		padding: 0 0 2.4rem 0;
 		display: block;
-		// margin-bottom: 6rem;
 	}
 }
 
@@ -53,6 +47,11 @@ h3 {
 
 	@include respond(tab-land) {
 		font-size: 2.8rem;
+	}
+
+	@include respond(phone-sm) {
+		font-size: 2.5rem;
+		text-align: center;
 	}
 }
 
