--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,15 +1,14 @@
 @import "abstracts/mixins";
-@import "abstracts/variables.scss";
+@import "abstracts/variables";
 
-@import "base/base.scss";
-@import "base/typography.scss";
+@import "base/base";
+@import "base/typography";
 
-@import "components/buttons.scss";
+@import "components/buttons";
 
-@import "layout/footer.scss";
-@import "layout/grid";
-@import "layout/navigation.scss";
+@import "layout/footer";
+@import "layout/navigation";
 
-@import "pages/home.scss";
+@import "pages/home";
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,400;1,500&display=swap");
